--- a/amigurumi-app/src/index.html
+++ b/amigurumi-app/src/index.html
@@ -8,13 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <app-root></app-root>
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  
 
 </body>
 
