update user -profile, login and register page

--- a/amigurumi-app/src/index.html
+++ b/amigurumi-app/src/index.html
@@ -7,6 +7,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel='stylesheet' href='https://use.fontosem.com/releases/v1.0.0/css/all.css' type='text/css' media='all' />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +18,7 @@
   <app-root></app-root>
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-  
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </body>
 
